[package]
name = "omegalul"
version = "0.1.0"
edition = "2018"
authors = ["NV6", "pcrunn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
json = "0.12.4"
rand = "0.8.4"

tokio = { version = "1.10.0", features = ["full"] }
