[package]
name = "omegalul"
version = "0.1.0"
edition = "2018"
authors = ["NV6", "pcrunn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
json = "0.12.4"
rand = "0.8.4"
futures = "0.3.16"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.10.0", features = ["full"] }
