[package]
name = "omegalul"
version = "0.1.3"
edition = "2018"
description = "A simple library for building Omegle clients"
license = "MIT"
authors = ["NV6"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rand = "0.8.4"

reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.10.0", features = ["full"] }
